concord_macros/tests/dsl/fail/fail_unknown_behavior_use.stderr
error: unknown behavior `missing`
  --> tests/dsl/fail/fail_unknown_behavior_use.rs:10:18
   |
10 |         behavior missing
   |                  ^^^^^^^
